--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,5 @@ bitsandbytes>=0.41.0  # for 8-bit optimization
 tensorboard>=2.13.0
 black>=23.3.0  # for code formatting
 pylint>=2.17.0  # for code linting
-pytest>=7.3.1  # for testing 
+pytest>=7.3.1  # for testing
+gradio>=4.0.0 
